--- a/LEATS Project/LEATS Project.csproj
+++ b/LEATS Project/LEATS Project.csproj
@@ -173,8 +173,8 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InternalController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\SpecialisationsController.cs" />
     <Compile Include="Controllers\StudentHomeController.cs" />
-    <Compile Include="Controllers\TutorController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -343,6 +343,11 @@
     <Content Include="Views\Tutor\RegisterTutor.cshtml" />
     <Content Include="Views\Shared\_InternalLayout.cshtml" />
     <Content Include="Views\Home\GoInside.cshtml" />
+    <Content Include="Views\Specialisations\Create.cshtml" />
+    <Content Include="Views\Specialisations\Delete.cshtml" />
+    <Content Include="Views\Specialisations\Details.cshtml" />
+    <Content Include="Views\Specialisations\Edit.cshtml" />
+    <Content Include="Views\Specialisations\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
