--- a/LEATS Project/LEATS Project.csproj
+++ b/LEATS Project/LEATS Project.csproj
@@ -409,6 +409,9 @@
     <Content Include="Views\ModuleApplications\Details.cshtml" />
     <Content Include="Views\ModuleApplications\Edit.cshtml" />
     <Content Include="Views\ModuleApplications\Index.cshtml" />
+    <Content Include="Views\Shared\_AdminPartial.cshtml" />
+    <Content Include="Views\Shared\_StudentPartial.cshtml" />
+    <Content Include="Views\Shared\_TutorPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
