--- a/LEATS Project/LEATS Project.csproj
+++ b/LEATS Project/LEATS Project.csproj
@@ -412,6 +412,7 @@
     <Content Include="Views\Shared\_AdminPartial.cshtml" />
     <Content Include="Views\Shared\_StudentPartial.cshtml" />
     <Content Include="Views\Shared\_TutorPartial.cshtml" />
+    <Content Include="Views\Shared\_GeneralPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
