Outside review done

--- a/LEATS Project/LEATS Project.csproj
+++ b/LEATS Project/LEATS Project.csproj
@@ -290,6 +290,7 @@
     <Content Include="Images\khayeh.jpg" />
     <Content Include="Images\Tutor.jpg" />
     <Content Include="Images\tutor1.jpg" />
+    <Content Include="Images\Tutoring jobs in South Africa.mp4" />
     <Content Include="Models\LeatsDataModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>LeatsDataModel.edmx</DependentUpon>
