--- a/LEATS Project/LEATS Project.csproj
+++ b/LEATS Project/LEATS Project.csproj
@@ -427,6 +427,7 @@
     <Content Include="Views\AspNetRoles\Index.cshtml" />
     <Content Include="Views\Home\InsideIndex.cshtml" />
     <Content Include="Views\Shared\_UserPartial.cshtml" />
+    <Content Include="Views\Shared\_StudentTutorPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
